--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -1,4 +1,9 @@
-<li class="list-group-item">
+<li
+  [ngClass]="{
+    'list-group-item': true,
+    'list-group-item-success': appareilStatus === 'allumé'
+  }"
+>
   <div
     style="
       width:20px;
@@ -7,6 +12,8 @@
     "
     *ngIf="appareilStatus === 'éteint'"
   ></div>
-  <h4>Appareil: {{ appareilName }} -- Status: {{ getStatus() }}</h4>
+  <h4 [ngStyle]="{ color: getColor() }">
+    Appareil: {{ appareilName }} -- Status: {{ getStatus() }}
+  </h4>
   <input type="text" class="form-control" [(ngModel)]="appareilName" />
 </li>
