--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -1,7 +1,8 @@
 <li
   [ngClass]="{
     'list-group-item': true,
-    'list-group-item-success': appareilStatus === 'allumé'
+    'list-group-item-success': appareilStatus === 'allumé',
+    'list-group-item-danger': appareilStatus === 'éteint'
   }"
 >
   <div
