--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -1,4 +1,4 @@
-<div col-xs-12>
+<div class="col-xs-12">
   <h2>Mes appareils</h2>
   <p>Mise à jour: {{ lastUpdate | async | date: "dd-MMM-yyy, h:m" }}</p>
   <ul class="list-group">
