--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,11 @@
 <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
     <ul class="nav navbar">
-      <li routerLinkActive="active" class="nav-item nav-link">
-        <a
-          data-toggle="tab"
-          routerLink="/appareils"
-          role="tab"
-          >Appareils</a
-        >
+      <li routerLinkActive="active">
+        <a class="nav-item nav-link" routerLink="/appareils">Appareils</a>
       </li>
-      <li routerLinkActive="active" class="nav-item nav-link">
-        <a data-toggle="tab" routerLink="/auth" role="tab">Authentification</a>
+      <li routerLinkActive="active">
+        <a class="nav-item nav-link" routerLink="/auth">Authentification</a>
       </li>
     </ul>
   </div>
