--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -7,6 +7,7 @@
       [indexOfAppareil]="i"
       [appareilName]="appareil.name"
       [appareilStatus]="appareil.status"
+      [id]="appareil.id"
     ></app-appareil>
   </ul>
   <br />
