Observable en secondes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
       <li routerLinkActive="active">
         <a class="nav-item nav-link" routerLink="/appareils">Appareils</a>
       </li>
+      <li>
+        <a>Vous êtes connecté depuis: {{ secondes }} secondes !</a>
+      </li>
     </ul>
   </div>
 </nav>
