--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
       <li routerLinkActive="active">
         <a class="nav-item nav-link" routerLink="edit">Nouvel appareil</a>
       </li>
+      <li routerLinkActive="active">
+        <a class="nav-item nav-link" routerLink="users">Utilisateurs</a>
+      </li>
       <li>
         <a class="nav-item nav-link"
           >Vous êtes connecté depuis: {{ secondes }} secondes !</a
